feat: Update models

--- a/notebooks/third_convnet.ipynb
+++ b/notebooks/third_convnet.ipynb
@@ -663,33 +663,16 @@
    "id": "ec6d0144",
    "metadata": {},
    "source": [
-    "### Define the loss function with L2 regularization"
+    "### Define the loss function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "01d34c8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def Criterion(model, preds, targets):\n",
-    "#     ce            = nn.CrossEntropyLoss().to(device)\n",
-    "#     loss          = ce(preds, targets.long()) \n",
-    "#     # add l2_regularization            \n",
-    "#     l2_regularization = 0\n",
-    "#     for param in model.parameters():\n",
-    "#         l2_regularization += torch.norm(param,2)\n",
-    "#     loss += 0.0001*l2_regularization # 0.0001 is the weight_decay\n",
-    "#     # compute mean accuracy in the batch\n",
-    "#     pred_labels   = torch.max(preds, 1)[1] # same as argmax\n",
-    "#     acc           = torch.sum(pred_labels == targets.data)\n",
-    "#     n             = pred_labels.size(0)\n",
-    "#     acc           = acc/n\n",
-    "#     return loss, acc\n",
-    "\n",
-    "# criterion = Criterion\n",
-    "\n",
     "weights = Tensor([1.0, number_of_class_1 / number_of_class_2]) # Adjust weights based on class imbalance\n",
     "criterion = nn.CrossEntropyLoss(weight=weights)"
    ]
