refactor: VGG16Net class

--- a/notebooks/pre_trained_2.ipynb
+++ b/notebooks/pre_trained_2.ipynb
@@ -549,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 244,
+      "execution_count": null,
       "id": "7ec77afd",
       "metadata": {
         "id": "7ec77afd"
@@ -560,27 +560,27 @@
         "    def __init__(self, num_classes):\n",
         "        super(VGG16Net, self).__init__()\n",
         "\n",
-        "        # Carrega VGG-16 pré-treinada\n",
+        "        # Load pre-trained VGG-16\n",
         "        vgg16 = models.vgg16_bn(pretrained=True)\n",
         "\n",
-        "        # Extrator de características (sem o classifier final)\n",
+        "        # Feature extractor (without the final classifier)\n",
         "        self.features = vgg16.features\n",
         "\n",
-        "        # Congela pesos (opcional: descongele se quiser fine-tuning)\n",
+        "        # Freeze weights (unfreeze if you want fine-tuning)\n",
         "        # for param in self.features.parameters():\n",
         "        #     param.requires_grad = False\n",
         "\n",
-        "        # Classificador ajustado para seu número de classes\n",
+        "        # Classifier adjusted for your number of classes\n",
         "        self.classifier = nn.Sequential(\n",
-        "            nn.Linear(512 * 7 * 7, 512),  # depende da entrada (e.g., 224x224)\n",
+        "            nn.Linear(512 * 7 * 7, 512),  # depends on the input size (e.g., 224x224)\n",
         "            nn.ReLU(),\n",
         "            nn.Dropout(0.5),\n",
         "            nn.Linear(512, num_classes)\n",
         "        )\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = self.features(x)                    # shape: [B, 512, 7, 7]\n",
-        "        x = torch.flatten(x, start_dim=1)       # shape: [B, 512*7*7]\n",
+        "        x = self.features(x)\n",
+        "        x = torch.flatten(x, start_dim=1)\n",
         "        x = self.classifier(x)\n",
         "        return x"
       ]
