--- a/notebooks/pre_trained.ipynb
+++ b/notebooks/pre_trained.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "e2b3a0b4",
       "metadata": {
         "id": "e2b3a0b4"
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 188,
+      "execution_count": 3,
       "id": "Efh0sWk1uN6F",
       "metadata": {
         "colab": {
@@ -45,7 +45,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using device: cuda:0\n"
+            "Using device: cpu\n"
           ]
         }
       ],
@@ -67,17 +67,6 @@
       },
       "source": [
         "### Randomly split a fileset into training, validation, and test sets: output lists of image names"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a72e035a",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
       ]
     },
     {
@@ -1467,7 +1456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": null,
       "id": "11f3a4ac",
       "metadata": {
         "colab": {
@@ -1515,7 +1504,7 @@
         "plt.figure(figsize=(10, 8))\n",
         "scatter = plt.scatter(reduced_features[:, 0], reduced_features[:, 1], c=labels, cmap='viridis', alpha=0.7)\n",
         "plt.colorbar(scatter, label='Classes')\n",
-        "plt.title('t-SNE Projection of CorelNet Features')\n",
+        "plt.title(f't-SNE Projection of {model_name} Features')\n",
         "plt.xlabel('t-SNE Component 1')\n",
         "plt.ylabel('t-SNE Component 2')\n",
         "plt.grid()\n",
@@ -1524,7 +1513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": null,
       "id": "0ee74808",
       "metadata": {
         "colab": {
@@ -1573,7 +1562,7 @@
         "plt.figure(figsize=(10, 8))\n",
         "scatter_umap = plt.scatter(reduced_features_umap[:, 0], reduced_features_umap[:, 1], c=labels_umap, cmap='viridis', alpha=0.7)\n",
         "plt.colorbar(scatter_umap, label='Classes')\n",
-        "plt.title('UMAP Projection of CorelNet Features')\n",
+        "plt.title(f'UMAP Projection of {model_name} Features')\n",
         "plt.xlabel('UMAP Component 1')\n",
         "plt.ylabel('UMAP Component 2')\n",
         "plt.grid()\n",
@@ -1588,7 +1577,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "dl-larvae-py3.11",
       "language": "python",
       "name": "python3"
     },
